--- a/ejercicio3/pom.xml
+++ b/ejercicio3/pom.xml
@@ -9,9 +9,9 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.ob</groupId>
-	<artifactId>ejercicio3</artifactId>
+	<artifactId>LaptopApp</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>ejercicio3</name>
+	<name>LaptopApp</name>
 	<description>Project for Spring Boot</description>
 	<properties>
 		<java.version>17</java.version>
