--- a/.gitignore
+++ b/.gitignore
@@ -123,6 +123,9 @@ release.properties
 dependency-reduced-pom.xml
 buildNumber.properties
 .mvn/timing.properties
+.mvn/wrapper
+mvnw.cmd
+Mvnw
 # https://github.com/takari/maven-wrapper#usage-without-binary-jar
 .mvn/wrapper/maven-wrapper.jar
 
